--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
 <head>
   <meta charset="utf-8">
   <title>Memory game</title>
-  <link rel="stylesheet" href="style.css">
   <script src="script.js" type="application/javascript"></script>
 </head>
 
 <body onload="printBlanks();">
   <h1>Memory Game!</h1>
+  <div id="score">...</div>
   <h2>Click on a block and match the images</h2>
   <div class="divTable">
     <div class="divTableRows">
       <div class="divTableCell"><img src="" id="pic0" width="250" height="200" onclick="flipImage(0)"></div>
       <div class="divTableCell"><img src="" id="pic1" width="250" height="200" onclick="flipImage(1)"></div>
-    </div>
-    <div class="divTableRows">
       <div class="divTableCell"><img src="" id="pic2" width="250" height="200" onclick="flipImage(2)"></div>
       <div class="divTableCell"><img src="" id="pic3" width="250" height="200" onclick="flipImage(3)"></div>
+      <div class="divTableCell"><img src="" id="pic4" width="250" height="200" onclick="flipImage(4)"></div>
+      <div class="divTableCell"><img src="" id="pic5" width="250" height="200" onclick="flipImage(5)"></div>
+      <div class="divTableCell"><img src="" id="pic6" width="250" height="200" onclick="flipImage(6)"></div>
+      <div class="divTableCell"><img src="" id="pic7" width="250" height="200" onclick="flipImage(7)"></div>
+      <div class="divTableCell"><img src="" id="pic8" width="250" height="200" onclick="flipImage(8)"></div>
+      <div class="divTableCell"><img src="" id="pic9" width="250" height="200" onclick="flipImage(9)"></div>
+
     </div>
   </div>
-  </div>
+
 </body>
 
 </html>
