--- a/finalpage.html
+++ b/finalpage.html
@@ -8,25 +8,14 @@
     <script src="script.js" type="application/javascript"></script>
 </head>
 
-<body onload="playerInfo(); attempts()">
+<body onload="printFinalInfo()">
     <h1>You Win!!</h1>
     <div id="score">...</div>
-    <div class="divTable">
-        <div class="divTableRows">
-            <div class="divTableCell">""</div>
-            <div class="divTableCell"><input type="text" id="firstNameGet">""</div>
-        </div>
-        <div class="divTable">
-            <div class="divTableRows">
-                <div class="divTableCell">""</div>
-                <div class="divTableCell"><input type="text" id="lastNameGet">""</div>
-            </div>
-            <div class="divTable">
-                <div class="divTableRows">
-                    <div class="divTableCell">""</div>
-                    <div class="divTableCell"><input type="text" id="ageGet">""</div>
-                </div>
-            </div>
+    <div id="firstNameGet">...</div>
+    <div id="lastNameGet">...</div>
+    <div id="ageGet">...</div>
+    </div>
+    </div>
 
 </body>
 
